<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_button"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/define_dimen_150"
            android:layout_height="@dimen/define_dimen_150"
            app:civ_border_color="@color/yellow"
            app:civ_border_width="@dimen/define_dimen_2"
            android:src="@drawable/img_splash" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:text="@string/start_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:padding="@dimen/define_dimen_20"
            android:gravity="center"
            android:text="@string/start_description"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xlarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="@dimen/define_dimen_20"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:paddingHorizontal="@dimen/define_dimen_20"
            android:paddingVertical="@dimen/define_dimen_10"
            android:text="@string/next_button"

            android:textSize="@dimen/text_size_xlarge" />
    </LinearLayout>
</RelativeLayout>